[package]
name = "connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.17"
maplit = { version = "1.0", optional = true }
term_size = { version = "0.3", optional = true }

[dependencies.ncurses]
features = ["wide"]
optional = true
version = "5.99.0"

[dependencies.crossterm]
optional = true
version = "0.23"

[features]
default = ["ncurses-backend"]
ncurses-backend = ["ncurses", "maplit", "term_size"]
crossterm-backend = ["crossterm"]
